@@ -1,3 +1,4 @@
+* Manage readonly state on group
 * Remove "Please wait" box
 * Refactorize date widgets
 * Manage tuple on Reference
